Добавлены тесты для PetController
