# ClinicService/Controllers/ConsultationController.cs
@@ -2,6 +2,7 @@
 using ClinicService.Models;
 using ClinicService.Services;
 using Microsoft.AspNetCore.Mvc;
+using Swashbuckle.AspNetCore.Annotations;
 
 namespace ClinicService.Controllers
 {
@@ -17,6 +18,7 @@ namespace ClinicService.Controllers
         }
 
         [HttpPost("create")]
+        [SwaggerOperation(OperationId = "ConsultationCreate")]
         public ActionResult<int> Create([FromBody] CreateConsultationRequest createRequest)
         {
             int res = _consultationRepository.Create(new Consultation
@@ -30,6 +32,7 @@ namespace ClinicService.Controllers
         }
 
         [HttpPut("update")]
+        [SwaggerOperation(OperationId = "ConsultationUpdate")]
         public ActionResult<int> Update([FromBody] UpdateConsultationRequest updateRequest)
         {
             int res = _consultationRepository.Update(new Consultation
@@ -44,6 +47,7 @@ namespace ClinicService.Controllers
         }
 
         [HttpDelete("delete")]
+        [SwaggerOperation(OperationId = "ConsultationDelete")]
         public ActionResult<int> Delete(int consultationId)
         {
             int res = _consultationRepository.Delete(consultationId);
@@ -51,12 +55,14 @@ namespace ClinicService.Controllers
         }
 
         [HttpGet("get-all")]
+        [SwaggerOperation(OperationId = "ConsultationGetAll")]
         public ActionResult<List<Consultation>> GetAll()
         {
             return Ok(_consultationRepository.GetAll());
         }
 
         [HttpGet("get-by-id")]
+        [SwaggerOperation(OperationId = "ConsultationGetById")]
         public ActionResult<Consultation> GetById(int consultationId)
         {
             return Ok(_consultationRepository.GetById(consultationId));
